chat messages are going to server

--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -5,7 +5,10 @@
     overflow: hidden;
     background: $basic-background;
     font-family: $content-font;
-
+    #loginUser,
+    #chatName {
+        display: none;
+    }
     .chat-users {
         display: none;
         position: fixed;
