--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -10,6 +10,8 @@ block content
      h1(class="energy-panel-wrapper__title") energy2000 Panel
      h2(class='energy-panel-wrapper__subtitle') Zalogowano jako 
        span= fullName 
+     div(id='loginUser')=login 
+     div(id='chatName')=chatName
        span(class='user-settings')
          i(class="fas fa-user-cog")
      include parts/crmTaskWindow
