--- a/public/stylesheets/modifiers/sass/_crm-chat.scss
+++ b/public/stylesheets/modifiers/sass/_crm-chat.scss
@@ -16,7 +16,15 @@
         flex-direction: column;
         flex-basis: 90%;
         overflow-y: scroll;
+        -ms-overflow-style: none;
+        /* IE and Edge */
         scrollbar-width: none;
+
+        /* Firefox */
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
     }
     .chat-icon {
         background-color: cornflowerblue;
@@ -28,7 +36,7 @@
         line-height: 50px;
         border: 1px solid whitesmoke;
         position: absolute;
-        top: -55px;
+        top: 0px;
         left: -62px;
         cursor: pointer;
         &:hover {
@@ -49,7 +57,7 @@
         }
         &--me {
             background: #FBB03B;
-            align-self: end;
+            align-self: flex-end;
             color: #35322c;
         }
     }
@@ -68,6 +76,7 @@
     &__send {
         flex-basis: 10%;
         display: flex;
+        margin-top: 5px;
     }
     &__input {
         background-color: transparent;
