--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -96,9 +96,11 @@ block content
                option(value="nie wybrano") nie wybrano
                option(value="potencjalny") Potencjalny
                option(value="rezygnacja") Rezygnacja
+               option(value="out") OUT
                option(value="błąd bazy") Błąd bazy
                option(value="aktualny") Aktualny
                option(value="kontakt") Kontakt
+               option(value="kwp") KWP
                option(value="no") NO
                option(value="spotkanie") Spotkanie
                option(value="faktura") Faktura
@@ -153,9 +155,11 @@ block content
            select(class='particular-client__select-status' name='status')
              option(value="potencjalny") Potencjalny
              option(value="rezygnacja") Rezygnacja
+             option(value="out") OUT
              option(value="błąd bazy") Błąd bazy
              option(value="aktualny") Aktualny
              option(value="kontakt") Kontakt
+             option(value="kwp") KWP
              option(value="no") NO
              option(value="spotkanie") Spotkanie
              option(value="faktura") Faktura
