--- a/views/parts/crmAddClient.pug
+++ b/views/parts/crmAddClient.pug
@@ -31,9 +31,11 @@ form(action="/panel/add-client/" method='POST' class='particular-client-new')
       select(class='particular-client-new__select-status' name='status')
         option(value="potencjalny") Potencjalny
         option(value="rezygnacja") Rezygnacja
+        option(value="out") OUT
         option(value="błąd bazy") Błąd bazy
         option(value="aktualny") Aktualny
         option(value="kontakt") Kontakt
+        option(value="kwp") KWP
         option(value="no") NO
         option(value="spotkanie") Spotkanie
         option(value="faktura") Faktura
