--- a/public/stylesheets/modifiers/sass/_crm-chat.scss
+++ b/public/stylesheets/modifiers/sass/_crm-chat.scss
@@ -36,7 +36,7 @@
         line-height: 50px;
         border: 1px solid whitesmoke;
         position: absolute;
-        top: 0px;
+        bottom: 0px;
         left: -62px;
         cursor: pointer;
         &:hover {
