add mail status

--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -101,6 +101,7 @@ block content
                option(value="aktualny") Aktualny
                option(value="kontakt") Kontakt
                option(value="kwp") KWP
+               option(value="mail") Mail
                option(value="no") NO
                option(value="spotkanie") Spotkanie
                option(value="faktura") Faktura
@@ -160,6 +161,7 @@ block content
              option(value="aktualny") Aktualny
              option(value="kontakt") Kontakt
              option(value="kwp") KWP
+             option(value="mail") Mail
              option(value="no") NO
              option(value="spotkanie") Spotkanie
              option(value="faktura") Faktura
