--- a/views/parts/crmAddClient.pug
+++ b/views/parts/crmAddClient.pug
@@ -36,6 +36,7 @@ form(action="/panel/add-client/" method='POST' class='particular-client-new')
         option(value="aktualny") Aktualny
         option(value="kontakt") Kontakt
         option(value="kwp") KWP
+        option(value="mail") Mail
         option(value="no") NO
         option(value="spotkanie") Spotkanie
         option(value="faktura") Faktura
