add gaz category

--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -78,6 +78,7 @@ block content
              label(for="whatFilter") Kategoria 
              select(id='category')
                option(value="nie wybrano") nie wybrano
+               option(value="gaz") Gaz 
                option(value="country") Gospodarstwa
                option(value="factory") Zakłady
                option(value="p5") P5
@@ -184,6 +185,7 @@ block content
            .particular-client__div
              label(for="category") Kategoria
              select(class='particular-client__par particular-client__category' name='category')
+              option(value="gaz") Gaz 
               option(value="country") Gospodarstwa
               option(value="factory") Zakłady
               option(value="p5") P5
