--- a/views/parts/crmAddClient.pug
+++ b/views/parts/crmAddClient.pug
@@ -60,6 +60,7 @@ form(action="/panel/add-client/" method='POST' class='particular-client-new')
         label(for="category") Kategoria
         select(class='particular-client-new__par particular-client-new__category' name='category')
           option(value="country") Gospodarstwa
+          option(value="gaz") Gaz 
           option(value="factory") Zakłady
           option(value="p5") P5
           option(value="partner") Inny partner
